# IPTCconcapy

./: README.md  pyproject.toml
iptcconcapy/: main.py
tests/data/: file1.csv  file2.csv
