[tool.poetry]
name = "iptcconcapy"
version = "0.1.0"
description = ""
authors = ["Guillaume Havard <guill.havard@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
iptcconcapy = "iptcconcapy.main:main" 

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable=["missing-module-docstring"]
